AC_PREREQ([2.68])
AC_INIT([weechat-js-plugin], [0.1.0])

# Checks for programs.
PKG_PROG_PKG_CONFIG
AC_PROG_CXX

# Checks for compiler options.

# Checks for libraries
PKG_CHECK_MODULES([WEECHAT], [weechat >= 0.3.4])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_SUBST(CFLAGS, "-Wall -fPIC")

AC_CONFIG_FILES([
    Makefile
])
AC_OUTPUT
